--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
         <meta name="apple-mobile-web-app-capable" content="yes">
         <link rel="stylesheet" href="./resources/ol.css">
         <link rel="stylesheet" href="resources/fontawesome-all.min.css">
-        <link rel="stylesheet" type="text/css" href="resources/horsey.min.css">
-        <link rel="stylesheet" type="text/css" href="resources/ol3-search-layer.min.css">
         <link rel="stylesheet" href="./resources/ol-layerswitcher.css">
         <link rel="stylesheet" href="./resources/qgis2web.css">
         <style>
@@ -57,12 +55,9 @@
         <script src="resources/polyfills.js"></script>
         <script src="./resources/functions.js"></script>
         <script src="./resources/ol.js"></script>
-        <script src="http://cdn.polyfill.io/v2/polyfill.min.js?features=Element.prototype.classList,URL"></script>
-        <script src="resources/horsey.min.js"></script>
-        <script src="resources/ol3-search-layer.js"></script>
         <script src="./resources/ol-layerswitcher.js"></script>
-        <script src="layers/ShapAiresprotges_0.js"></script><script src="layers/ShapFotsAmnages_1.js"></script><script src="layers/Limitecommunale14112018_2.js"></script><script src="layers/Limite_rgionale14112018_3.js"></script>
-        <script src="styles/ShapAiresprotges_0_style.js"></script><script src="styles/ShapFotsAmnages_1_style.js"></script><script src="styles/Limitecommunale14112018_2_style.js"></script><script src="styles/Limite_rgionale14112018_3_style.js"></script>
+        <script src="layers/Parcours_de_btail_0.js"></script><script src="layers/Parcoursdebtail_Kahi_polyline_1.js"></script><script src="layers/Parcoursdebtail_Boulel_polyline_2.js"></script><script src="layers/Pb_ToubaMbella_polyline_3.js"></script><script src="layers/Pistesbtail_FassThieckene_polyline_4.js"></script><script src="layers/Pb_Diamal_polyline_5.js"></script><script src="layers/Parcours_btail_Gniby_polyline_6.js"></script><script src="layers/Pistesbtail_IdaMouride_polyline_7.js"></script><script src="layers/Pb_Khelcom_polyline_8.js"></script><script src="layers/PbKeurBaka_polyline_9.js"></script><script src="layers/Pb_Thiar_polyline_10.js"></script><script src="layers/Pistesdebtail_DaraMboss_polyline_11.js"></script><script src="layers/Pb_NgathieNaoud_polyline_12.js"></script><script src="layers/Pistesdebtail_PanalOuolof_polyline_13.js"></script><script src="layers/Pb_Mbadakhoune_polyline_14.js"></script><script src="layers/Pb_Ndiago_polyline_15.js"></script><script src="layers/ShapAiresprotges_16.js"></script><script src="layers/ShapFotsAmnages_17.js"></script><script src="layers/17communescibles_18.js"></script><script src="layers/Limitecommunale14112018_19.js"></script><script src="layers/Limite_rgionale14112018_20.js"></script>
+        <script src="styles/Parcours_de_btail_0_style.js"></script><script src="styles/Parcoursdebtail_Kahi_polyline_1_style.js"></script><script src="styles/Parcoursdebtail_Boulel_polyline_2_style.js"></script><script src="styles/Pb_ToubaMbella_polyline_3_style.js"></script><script src="styles/Pistesbtail_FassThieckene_polyline_4_style.js"></script><script src="styles/Pb_Diamal_polyline_5_style.js"></script><script src="styles/Parcours_btail_Gniby_polyline_6_style.js"></script><script src="styles/Pistesbtail_IdaMouride_polyline_7_style.js"></script><script src="styles/Pb_Khelcom_polyline_8_style.js"></script><script src="styles/PbKeurBaka_polyline_9_style.js"></script><script src="styles/Pb_Thiar_polyline_10_style.js"></script><script src="styles/Pistesdebtail_DaraMboss_polyline_11_style.js"></script><script src="styles/Pb_NgathieNaoud_polyline_12_style.js"></script><script src="styles/Pistesdebtail_PanalOuolof_polyline_13_style.js"></script><script src="styles/Pb_Mbadakhoune_polyline_14_style.js"></script><script src="styles/Pb_Ndiago_polyline_15_style.js"></script><script src="styles/ShapAiresprotges_16_style.js"></script><script src="styles/ShapFotsAmnages_17_style.js"></script><script src="styles/17communescibles_18_style.js"></script><script src="styles/Limitecommunale14112018_19_style.js"></script><script src="styles/Limite_rgionale14112018_20_style.js"></script>
         <script src="./layers/layers.js" type="text/javascript"></script> 
         <script src="./resources/Autolinker.min.js"></script>
         <script src="./resources/qgis2web.js"></script>
